--- a/ansible/roles/image-builder-content-sources/templates/content-source.j2
+++ b/ansible/roles/image-builder-content-sources/templates/content-source.j2
@@ -1,4 +1,4 @@
-{% for key, value in composer_source.items() %}
+{% for key, value in content_source.items() %}
 {% if value is boolean %}
 {{ key }} = {{ value | lower }}
 {% elif value is string %}
